--- a/README.ipynb
+++ b/README.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "### `cmatrix`\n",
     "\n",
-    "O cmatrix é um programa de linha de comando que simula o efeito visual de código caindo em um terminal, inspirado na interface de computadores vistos em filmes. Ele cria uma matriz de caracteres aleatórios que deslizam pela tela, proporcionando um visual estilizado e retro. O cmatrix é popular entre entusiastas de tecnologia e Linux pela sua estética única e pela capacidade de personalização através de diferentes modos de exibição e opções de configuração.\n"
+    "O `cmatrix` é um programa de linha de comando que simula o efeito visual de código caindo em um `Terminal Emulator`, inspirado na _interface_ de computadores vistos em filmes. Ele cria uma matriz de caracteres aleatórios que deslizam pela tela, proporcionando um visual estilizado e retro. O `cmatrix` é popular entre entusiastas de tecnologia e `Linux` pela sua estética única e pela capacidade de personalização através de diferentes modos de exibição e opções de configuração.\n"
    ]
   },
   {
@@ -34,7 +34,11 @@
     "\n",
     "Para configurar/instalar/usar o `cheese` no `Linux Ubuntu`, você pode seguir estes passos:\n",
     "\n",
-    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando: `Ctrl + Alt + T`"
+    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n",
+    "\n",
+    "    ```bash\n",
+    "    Ctrl + Alt + T\n",
+    "    ```"
    ]
   },
   {
@@ -43,33 +47,64 @@
    "source": [
     "2. Certifique-se de que seu sistema esteja limpo e atualizado.\n",
     "\n",
-    "    2.1 Limpar o `cache` do gerenciador de pacotes `apt`. Especificamente, ele remove todos os arquivos de pacotes (`.deb`) baixados pelo `apt` e armazenados em `/var/cache/apt/archives/`. Digite o seguinte comando: `sudo apt clean` \n",
-    "    \n",
-    "    2.2 Remover pacotes `.deb` antigos ou duplicados do cache local. É útil para liberar espaço, pois remove apenas os pacotes que não podem mais ser baixados (ou seja, versões antigas de pacotes que foram atualizados). Digite o seguinte comando: `sudo apt autoclean`\n",
+    "    2.1 Limpar o `cache` do gerenciador de pacotes `apt`. Especificamente, ele remove todos os arquivos de pacotes (`.deb`) baixados pelo `apt` e armazenados em `/var/cache/apt/archives/`. Digite o seguinte comando:\n",
+    "    ```bash\n",
+    "    sudo apt clean\n",
+    "    ```\n",
     "\n",
-    "    2.3 Remover pacotes que foram automaticamente instalados para satisfazer as dependências de outros pacotes e que não são mais necessários. Digite o seguinte comando: `sudo apt autoremove -y`\n",
+    "    2.2 Remover pacotes `.deb` antigos ou duplicados do `cache` local. É útil para liberar espaço, pois remove apenas os pacotes que não podem mais ser baixados (ou seja, versões antigas de pacotes que foram atualizados). Digite o seguinte comando:\n",
+    "    ```bash\n",
+    "    sudo apt autoclean\n",
+    "    ```\n",
     "\n",
-    "    2.4 Buscar as atualizações disponíveis para os pacotes que estão instalados em seu sistema. Digite o seguinte comando e pressione `Enter`: `sudo apt update`\n",
+    "    2.3 Remover pacotes que foram automaticamente instalados para satisfazer as dependências de outros pacotes e que não são mais necessários. Digite o seguinte comando:\n",
+    "    ```bash\n",
+    "    sudo apt autoremove -y\n",
+    "    ```\n",
     "\n",
-    "    2.5 **Corrigir pacotes quebrados**: Isso atualizará a lista de pacotes disponíveis e tentará corrigir pacotes quebrados ou com dependências ausentes: `sudo apt --fix-broken install`\n",
+    "    2.4 Buscar as atualizações disponíveis para os pacotes que estão instalados em seu sistema. Digite o seguinte comando e pressione `Enter`:\n",
+    "    ```bash\n",
+    "    sudo apt update\n",
+    "    ```\n",
     "\n",
-    "    2.6 Limpar o `cache` do gerenciador de pacotes `apt`. Especificamente, ele remove todos os arquivos de pacotes (`.deb`) baixados pelo `apt` e armazenados em `/var/cache/apt/archives/`. Digite o seguinte comando: `sudo apt clean` \n",
-    "    \n",
-    "    2.7 Para ver a lista de pacotes a serem atualizados, digite o seguinte comando e pressione `Enter`:  `sudo apt list --upgradable`\n",
+    "    2.5 **Corrigir pacotes quebrados**: Isso atualizará a lista de pacotes disponíveis e tentará corrigir pacotes quebrados ou com dependências ausentes:\n",
+    "    ```bash\n",
+    "    sudo apt --fix-broken install\n",
+    "    ```\n",
     "\n",
-    "    2.8 Realmente atualizar os pacotes instalados para as suas versões mais recentes, com base na última vez que você executou `sudo apt update`. Digite o seguinte comando e pressione `Enter`: `sudo apt full-upgrade -y`\n",
-    "    "
+    "    2.6 Limpar o `cache` do gerenciador de pacotes `apt` novamente:\n",
+    "    ```bash\n",
+    "    sudo apt clean\n",
+    "    ```\n",
+    "\n",
+    "    2.7 Para ver a lista de pacotes a serem atualizados, digite o seguinte comando e pressione `Enter`:\n",
+    "    ```bash\n",
+    "    sudo apt list --upgradable\n",
+    "    ```\n",
+    "\n",
+    "    2.8 Realmente atualizar os pacotes instalados para as suas versões mais recentes, com base na última vez que você executou `sudo apt update`. Digite o seguinte comando e pressione `Enter`:\n",
+    "    ```bash\n",
+    "    sudo apt full-upgrade -y\n",
+    "    ```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. **Instale o pacote cmatrix utilizando o comando**: `sudo apt install cmatrix -y`\n",
+    "3. **Instale o pacote `cmatrix` utilizando o comando**:\n",
     "\n",
-    "Após a conclusão da instalação, você pode executar o `cmatrix` simplesmente digitando `cmatrix` no terminal. Para sair do `cmatrix`, basta pressionar `Ctrl+C`.\n",
+    "    ```bash\n",
+    "    sudo apt install cmatrix -y\n",
+    "    ```\n",
     "\n",
-    "Se você quiser ver mais opções e como configurar o comportamento do `cmatrix`, pode consultar a página de manual digitando man `cmatrix` no terminal."
+    "    Após a conclusão da instalação, você pode executar o `cmatrix` simplesmente digitando `cmatrix` no `Terminal Emulator`. Para sair do `cmatrix`, basta pressionar `Ctrl+C`.\n",
+    "\n",
+    "Se você quiser ver mais opções e como configurar o comportamento do `cmatrix`, pode consultar a página de manual digitando no `Terminal Emulator`:\n",
+    "\n",
+    "    ```bash\n",
+    "    man cmatrix\n",
+    "    ```"
    ]
   },
   {
@@ -84,11 +119,15 @@
     "\n",
     "Para configurar/instalar/usar o `cheese` no `Linux Ubuntu` sem precisar digitar linha por linha, você pode seguir estas etapas:\n",
     "\n",
-    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando: `Ctrl + Alt + T`\n",
+    "1. Abra o `Terminal Emulator`. Você pode fazer isso pressionando:\n",
+    "\n",
+    "    ```bash\n",
+    "    Ctrl + Alt + T\n",
+    "    ```\n",
     "\n",
     "2. Digite o seguinte comando e pressione `Enter`:\n",
     "\n",
-    "    ```\n",
+    "    ```bash\n",
     "    sudo apt clean                                                            \n",
     "    sudo apt autoclean\n",
     "    sudo apt autoremove -y\n",
@@ -112,7 +151,7 @@
    "source": [
     "## Referências\n",
     "\n",
-    "[1] OPENAI. ***Install Cheese on Ubuntu.*** Disponível em: <https://chatgpt.com/c/9c4f8197-ceac-458e-ae02-695fb7c9d67a> (texto adaptado). Acessado em: 23/04/2023 17:11.\n",
+    "[1] OPENAI. ***Instalar o `cmatrix` no `linux ubuntu` pelo `terminal emulator`.*** Disponível em: <https://chatgpt.com/c/9c4f8197-ceac-458e-ae02-695fb7c9d67a> (texto adaptado). Acessado em: 23/04/2023 17:11.\n",
     "\n",
     "[2] OPENAI. ***Vs code: editor popular.*** Disponível em: <https://chat.openai.com/c/b640a25d-f8e3-4922-8a3b-ed74a2657e42> (texto adaptado). Acessado em: 23/04/2024 17:10.\n"
    ]
